KUB 24/deployment_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
---
apiVersion: v1
kind: Service
metadata:
 name: svc-internal
 namespace: default
spec:
 type: ClusterIP
 selector:
   app: nginx
 ports:
 - port: 80
   targetPort: 80
