KUB 24/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    # Указываем, каким образом выписывать сертификат
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: ingress.9a25c.task24.rbr-kubernetes.com
    http:
      paths:
      - backend:
          service:
            name: svc-internal
            port:
               number: 80
        path: /
        pathType: Prefix
  # Указываем настройки для tls — для какого хоста нужен tls и куда сохранить полученный сертификат
  tls:
  - hosts:
    - ingress.9a25c.task24.rbr-kubernetes.com
    secretName: back-dev-kis-im-cert
